# course_drf_docker

./: .coverage  .env.sample  Dockerfile  README.md  celery_run  celerybeat-schedule.dir  docker-compose.yml  habit_fixture.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fixtures/: habit.json
habits/: __t.py  admin.py  models.py  schedule.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_user.py  0003_habit_task_habit_task_crontab_alter_habit_schedule.py  0004_alter_habit_task_crontab.py  0005_alter_habit_task.py  0006_alter_habit_schedule_alter_habit_user.py  0007_merge_20231122_1548.py
habits/services/: telegram.py
habits/tests/: tests.py  tests_services.py  tests_views.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_user_telegram_uid.py  0002_user_telegram_uid_user_telegram_username.py  0003_alter_user_telegram_uid.py  0003_alter_user_telegram_username.py  0004_alter_user_telegram_uid.py  0005_alter_user_options_alter_user_telegram_username.py
