[tool.poetry]
name = "course-drf"
version = "0.1.0"
description = ""
authors = ["grbcas <grbcas@gmail.com>"]
readme = "README.md"
packages = [{include = "course_drf"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
djangorestframework-simplejwt = "^5.3.0"
schedule = "^1.2.1"
openapi = "^1.1.0"
drf-yasg = "^1.21.7"
ipython = "^8.17.2"
requests = "^2.31.0"
celery = "^5.3.5"
django-celery-beat = "^2.5.0"
redis = "^5.0.1"
logging = "^0.4.9.6"
decorators = "^2.0.7"
eventlet = "^0.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
